# ChangeLog for www-apps/mythweb
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.42 2007/08/15 13:43:17 cardoe Exp $

  15 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.21_pre14151.ebuild:
  fixes after working with CharlieSu in #gentoo-mythtv

  14 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.21_pre14151.ebuild:
  fix path to apache config file. install lighttpd config file as well.

*mythweb-0.21_pre14151 (10 Aug 2007)

  10 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.21_pre14151.ebuild:
  new rev bump. fix bug #184143

  10 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.20_p11671.ebuild, mythweb-0.20.1_p14146.ebuild:
  fix bug #188109. remove old version

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20.1_p14146.ebuild:
  subversion packaging fix ups

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20.1_p14146.ebuild:
  setting S for subversion builds is wrong

*mythweb-0.20.1_p14146 (07 Aug 2007)

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org> mythweb-0.20.1.ebuild,
  +mythweb-0.20.1_p14146.ebuild:
  stable 0.20.1 to match rest of MythTV. upstream fixes in new ebuild. use
  subversion builds.

*mythweb-0.21_pre13775 (28 Jun 2007)

  28 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
  +files/postinstall-en-0.21.txt, -files/postinstall-en.txt,
  +mythweb-0.21_pre13775.ebuild:
  new version of mythweb trunk. fixes bug #175510.

*mythweb-0.20.1 (27 Apr 2007)

  27 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +mythweb-0.20.1.ebuild:
  bump to 0.20.1 release

  23 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.21_pre13285.ebuild:
  Some more tweaks but still not 100%

*mythweb-0.21_pre13285 (20 Apr 2007)

  20 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.21_pre13285.ebuild:
  Adding experimental trunk ebuild
