@@ -18,6 +18,10 @@ EBUILD mythweb-0.20.1_p14146.ebuild 1107 RMD160 ca6fbf056e855d645edc44b04f1e37be
 MD5 ede6a6eace8abef29ee8bcfbae461d60 mythweb-0.20.1_p14146.ebuild 1107
 RMD160 ca6fbf056e855d645edc44b04f1e37bee2e89beb mythweb-0.20.1_p14146.ebuild 1107
 SHA256 551be5586e068d79f5ff7dd385fc727e37f90b386b3d028f22226f2e468e6432 mythweb-0.20.1_p14146.ebuild 1107
+EBUILD mythweb-0.20.1_p14269.ebuild 1107 RMD160 2f5da7d299e628d1fcbdf4ea46db7b021db526ac SHA1 918ad42f1ea61cca4f5a41803ba64301f910fd04 SHA256 167126096dc15beea03591fa9ef513ceca0610261b54585b0f666b090c13d29f
+MD5 54a715868cc4b8d9d487127e5e7c5ba4 mythweb-0.20.1_p14269.ebuild 1107
+RMD160 2f5da7d299e628d1fcbdf4ea46db7b021db526ac mythweb-0.20.1_p14269.ebuild 1107
+SHA256 167126096dc15beea03591fa9ef513ceca0610261b54585b0f666b090c13d29f mythweb-0.20.1_p14269.ebuild 1107
 EBUILD mythweb-0.21_pre13285.ebuild 983 RMD160 1f330b67a4c3010c9c89b9c3395becbb16edf823 SHA1 54150c415c0c0ca6b5bd3e0a8ddb0e50585f76bd SHA256 e3a1aaa19d8a698cfa2259bfbe5cbf0ed63f8e0103a84319b60a4ca0f8ca70aa
 MD5 1c73bec1961e4999450c3ea01cefa41c mythweb-0.21_pre13285.ebuild 983
 RMD160 1f330b67a4c3010c9c89b9c3395becbb16edf823 mythweb-0.21_pre13285.ebuild 983
@@ -30,10 +34,10 @@ EBUILD mythweb-0.21_pre14151.ebuild 1111 RMD160 b8c3cfb3fdf9e9693d5113495e5b6de9
 MD5 68643bee1b6c7ec2d641dce9bcc6eb41 mythweb-0.21_pre14151.ebuild 1111
 RMD160 b8c3cfb3fdf9e9693d5113495e5b6de9b3ca476e mythweb-0.21_pre14151.ebuild 1111
 SHA256 e797ea3ac2f6a0f2cbdbc465831291eb2166589fee17812ac4c5ee8496b93b4f mythweb-0.21_pre14151.ebuild 1111
-MISC ChangeLog 8526 RMD160 885ad3eb35e3b97b442d16ee63c8b77489385395 SHA1 12b148f1eecf1bb7a219e69bb68aed39f5fed5d7 SHA256 93cd49d4d62eecc544de322e7589e57293ffeda14a18f7396cd252c68ecc9a39
-MD5 9cac35758c2e81624e489e3c16887df0 ChangeLog 8526
-RMD160 885ad3eb35e3b97b442d16ee63c8b77489385395 ChangeLog 8526
-SHA256 93cd49d4d62eecc544de322e7589e57293ffeda14a18f7396cd252c68ecc9a39 ChangeLog 8526
+MISC ChangeLog 8679 RMD160 33b429fe91ff3394b8bcf337f005b031bb3fec21 SHA1 f9133849ae4e1d3258591c86d63b9b869aa47d01 SHA256 ff9d82734ef3670116b0940fe6ed18e06ac5d50696b77571cd6c1a9c24fd6e91
+MD5 6a77c17a5d1da14755acee3682daae8f ChangeLog 8679
+RMD160 33b429fe91ff3394b8bcf337f005b031bb3fec21 ChangeLog 8679
+SHA256 ff9d82734ef3670116b0940fe6ed18e06ac5d50696b77571cd6c1a9c24fd6e91 ChangeLog 8679
 MISC metadata.xml 222 RMD160 effccac2541ac4d0954899784d7d64c60a9c020e SHA1 c6bd979f236f5e6fe9332eb6568bee402efc793f SHA256 8b2065fecfbbdd0caa3c5eb86b98c22766db07f555edbf3127e9454b468ecff6
 MD5 f62db0df6ee8ee1d4fe7b9c3d74432a7 metadata.xml 222
 RMD160 effccac2541ac4d0954899784d7d64c60a9c020e metadata.xml 222
@@ -44,6 +48,9 @@ SHA256 f43fe2c70e22f48440414e84a4c19ae846d4cb5eb98ca3a9076716f69582fb4d files/di
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-mythweb-0.20.1_p14146 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-mythweb-0.20.1_p14146 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-mythweb-0.20.1_p14146 0
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-mythweb-0.20.1_p14269 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-mythweb-0.20.1_p14269 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-mythweb-0.20.1_p14269 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-mythweb-0.21_pre13285 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-mythweb-0.21_pre13285 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-mythweb-0.21_pre13285 0
@@ -54,9 +61,9 @@ MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-mythweb-0.21_pre14151 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-mythweb-0.21_pre14151 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-mythweb-0.21_pre14151 0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.5 (GNU/Linux)
+Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFGwwL+oeSe8B0zEfwRAm/6AJ4svkNQOYyPkgW5EclTyxZ6DVFZEQCdFDo9
-7NjkMr3aBUuvZnI6T7vayHU=
-=3ZDu
+iD8DBQFGzizEoeSe8B0zEfwRAiuUAJ9r6FWNUx0b1FTolaMhltQrFjmgtwCfcEri
+ral3EinvJPSwKpT+fgFXl14=
+=OUuO
 -----END PGP SIGNATURE-----
